<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/modern_gold"
    tools:context=".AltaFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_margen_izq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25171" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_margen_Derecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />


    <TextView
        android:id="@+id/Nombre_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_producto"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/guide_first" />

    <EditText
        android:id="@+id/edit_producto"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/introduzca_el_nombre_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/Nombre_producto"
        android:autofillHints=""
        />
    <TextView
        android:id="@+id/Talla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talla_del_producto"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/edit_producto" />
    <EditText
        android:id="@+id/Edit_talla"
        android:autofillHints=""
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/cu_l_es_la_talla_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/Talla" />

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/color_del_producto"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/Edit_talla" />

    <EditText
        android:id="@+id/edit_color"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints="¿Cuál es el color del producto?"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/cu_l_es_el_color_del_producto"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/color" />

    <TextView
        android:id="@+id/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/edit_color"
        />

    <EditText
        android:id="@+id/edit_precio"
        android:layout_width="0dp"
        android:text="@string/precio_del_producto"
        android:layout_height="40dp"
        android:drawablePadding="8dp"
        android:ems="10"
        android:paddingStart="16dp"
        android:inputType="textEmailAddress"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/precio"
        android:autofillHints="" />


    <Button
        android:id="@+id/button_dar_alta"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:alpha="0.8"
        android:text="@string/dar_de_alta"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/edit_precio" />



    <Button
        android:id="@+id/button_volver"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:alpha="0.8"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/volver_pantalla_inicio"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/edit_precio" />

</androidx.constraintlayout.widget.ConstraintLayout>